# cudaProject

./: CMakeLists.txt  README.md  test.cu  testFFT
include/: cudaFFT4Pico.cuh  gpuInfoPrint.cuh
src/: cudaFFT4Pico.cu  gpuInfoPrint.cu  main.cc
